// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Th Render <Th/> 1`] = `
<tr>
  <th
    class="af-table__th"
    role="columnheader"
  >
    child th
  </th>
</tr>
`;

exports[`Th Render <Th/> with modifier 1`] = `
<tr>
  <th
    class="af-table__th af-table__th--custom"
    role="columnheader"
  >
    child th
  </th>
</tr>
`;
